# actors/admin_api.py
@@ -6,7 +6,7 @@ from tapisservice.tapisflask.utils import handle_error, TapisApi
 from auth import authn_and_authz
 from controllers import AdminActorsResource, AdminWorkersResource, AdminExecutionsResource, \
     ActorPermissionsResource, AliasPermissionsResource, WorkersResource, WorkerResource, \
-    ActorConfigsPermissionsResource
+    ActorConfigsPermissionsResource, AdapterPermissionsResource
 from dashboard import dashboard
 
 app = Flask(__name__)
@@ -32,6 +32,7 @@ api.add_resource(WorkerResource, '/actors/<string:actor_id>/workers/<string:work
 api.add_resource(AdminActorsResource, '/actors/admin')
 api.add_resource(AdminWorkersResource, '/actors/admin/workers')
 api.add_resource(AdminExecutionsResource, '/actors/admin/executions')
+api.add_resource(AdapterPermissionsResource, '/adapters/<string:identifier>/permissions')
 
 # web app
 @app.route('/admin/dashboard', methods=['POST', 'GET'])
